Your commit message

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,6 +1,7 @@
 body {
-  background-color: #fff;
-  color: #333;
+  //background-color: #fff;
+  background: url('Leather-Background-iPad.jpg') repeat;
+  color: white;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
