--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@ body{
 }
 
 .container{
-    margin: 20px 0;
-    padding: 0 0 20px 0;
+    /*margin: 20px 0;*/
+    /*padding: 0 0 20px 0;*/
     overflow: hidden;
 }
