--- a/app/assets/stylesheets/ratings.css.scss
+++ b/app/assets/stylesheets/ratings.css.scss
@@ -45,11 +45,12 @@ body{
 
 /*list*/
 .picsTable{
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
 }
 
 .list_pic{
   width: 400px;
   height: 400px;
+  margin: 0 0 10px 0;
 }
