--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -2,6 +2,13 @@
 @import "twitter/bootstrap/responsive";
 
 body { padding-top: 60px;}
+//
+//@media only screen and (min-width: 979px) {
+//
+//
+//}
+
+
 // Set the correct sprite paths
 @iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings");
 @iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white");
@@ -30,3 +37,8 @@ body { padding-top: 60px;}
 //
 // Example:
 // @linkColor: #ff0000;
+
+@media only screen and (max-width: 979px) {
+
+  body { padding: 0;}
+}
