--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,7 +1,7 @@
 body {
   //background-color: #fff;
-  background: url('Leather-Background-iPad.jpg') repeat;
-  color: white;
+  background: url('coolbg.jpg') repeat;
+  color: black;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
