--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <%= link_to 'Home', ratings_url %>
           </li>
           <li class="">
-            <%= link_to 'All Pics', 'list' %>
+            <%= link_to 'All Pics', '/ratings/list' %>
           </li>
           <li>
             <%= link_to 'Upload Your Own', new_rating_path %>
@@ -41,7 +41,7 @@
   <%= yield %>
 </div>
 <footer>
-  <p>OpMaster</p>
+  <div class="credits">Designed By: OpMaster</div>
 
 </footer>
 
