--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,12 +1,8 @@
-@import "twitter/bootstrap/bootstrap";
+//@import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/responsive";
 
 body { padding-top: 60px;}
-//
-//@media only screen and (min-width: 979px) {
-//
-//
-//}
+
 
 
 // Set the correct sprite paths
