--- a/app/assets/stylesheets/ratings.css.scss
+++ b/app/assets/stylesheets/ratings.css.scss
@@ -46,11 +46,21 @@ body{
 /*list*/
 .picsTable{
   width: 100%;
+  max-width: 500px;
   margin: 0 auto;
 }
 
 .list_pic{
   width: 400px;
   height: 400px;
-  margin: 0 0 10px 0;
+  margin: 0 0 20px 0;
+  border: 1px solid black;
+  //padding: 5px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px black;
+
+}
+
+.image_container{
+
 }
