--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -11,8 +11,12 @@
     <tbody>
     <% @pics.each do |pic| %>
         <tr>
-          <td><%= image_tag(pic.pic_url, :class => 'list_pic') %></td>
-          <td>rating:<br><%= pic.rating.round(0) %></td>
+          <td>
+            <div class="image_container">
+              <%= image_tag(pic.pic_url, :class => 'list_pic') %>
+            </div>
+            </td>
+          <td>Rating:<br><%= pic.rating.round(0) %></td>
           <td><%= link_to 'Delete This Pic', pic,
                           :confirm => 'Are you sure?', :method => :delete %></td>
     <% end %>
