--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
       <%= link_to 'Fiverr Cool', ratings_url, :class => 'brand' %>
       <div class="nav-collapse">
         <ul class="nav">
-          <li class="active">
-            <%= link_to 'Home', ratings_url %>
+          <li>
+            <%= link_to 'Rate', ratings_url %>
           </li>
           <li class="">
             <%= link_to 'All Pics', '/ratings/list' %>
@@ -41,7 +41,7 @@
   <%= yield %>
 </div>
 <footer>
-  <div class="credits">Designed By: OpMaster</div>
+  <div class="credits">Designed By: OP</div>
 
 </footer>
 
