adding cloud storage fog

--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -17,8 +17,8 @@
             </div>
             </td>
           <td>Rating:<br><%= pic.rating.round(0) %></td>
-         <!--<td><%= link_to 'Delete This Pic', pic,
-                          :confirm => 'Are you sure?', :method => :delete %></td>-->
+         <td><%= link_to 'Delete This Pic', pic,
+                          :confirm => 'Are you sure?', :method => :delete %></td>
     <% end %>
     </tbody>
   </table>
