--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -4,8 +4,8 @@
   <table class="picsTable">
     <thead>
     <!--<tr>-->
-      <!--<th></th>-->
-      <!--<th></th>-->
+    <!--<th></th>-->
+    <!--<th></th>-->
     <!--</tr>-->
     </thead>
     <tbody>
@@ -15,10 +15,10 @@
             <div class="image_container">
               <%= image_tag(pic.pic_url, :class => 'list_pic') %>
             </div>
-            </td>
+          </td>
           <td>Rating:<br><%= pic.rating.round(0) %></td>
-         <td><%= link_to 'Delete This Pic', pic,
-                          :confirm => 'Are you sure?', :method => :delete %></td>
+         <!-- <td><%= link_to 'Delete This Pic', pic,
+                          :confirm => 'Are you sure?', :method => :delete %></td>-->
     <% end %>
     </tbody>
   </table>
