--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,7 +34,7 @@ body { padding-top: 60px;}
 // Example:
 // @linkColor: #ff0000;
 
-@media only screen and (max-width: 979px) {
+@media (max-width: 979px) {
 
   body { padding: 0;}
 }
