--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fiverr Cool!   </title>
+  <title>Fiverr Cool! </title>
   <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
@@ -12,20 +12,20 @@
 </head>
 <body>
 
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top" style="margin: 0;">
   <div class="navbar-inner">
     <div class="container">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to 'Fiverr Cool', ratings_url, :class => 'brand' %>
+      <%= link_to 'Fiverr Cool Picture Contest', ratings_url, :class => 'brand' %>
       <div class="nav-collapse">
         <ul class="nav">
           <li>
             <%= link_to 'Rate', ratings_url %>
           </li>
-          <li class="">
+          <li>
             <%= link_to 'All Pics', '/ratings/list' %>
           </li>
           <li>
