--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -16,7 +16,7 @@
               <%= image_tag(pic.pic_url, :class => 'list_pic') %>
             </div>
           </td>
-          <td>Rating:<br><%= pic.rating.round(0) %></td>
+          <td class="hidden-phone">Rating:<br><%= pic.rating.round(0) %></td>
           <!--<td><%= link_to 'Delete This Pic', pic,
                                :confirm => 'Are you sure?', :method => :delete %></td>-->
     <% end %>
