--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <div class="nav-collapse">
         <ul class="nav">
           <li>
-            <%= link_to 'Rate', ratings_url %>
+            <%= link_to 'Rate', ratings_path     %>
           </li>
           <li>
             <%= link_to 'All Pics', '/ratings/list' %>
