--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -1,13 +1,8 @@
 <div id="main">
   <h1>The Pics List</h1>
+  <p>Ordered by rating</p>
 
   <table class="picsTable">
-    <thead>
-    <!--<tr>-->
-    <!--<th></th>-->
-    <!--<th></th>-->
-    <!--</tr>-->
-    </thead>
     <tbody>
     <% @pics.each do |pic| %>
         <tr>
