--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,5 +1,5 @@
 //@import "twitter/bootstrap/bootstrap";
-@import "twitter/bootstrap/responsive";
+//@import "twitter/bootstrap/responsive";
 
 body { padding-top: 60px;}
 
@@ -39,7 +39,7 @@ body { padding-top: 60px;}
   body { padding: 0;}
 }
 
-@media (max-width: 979px) {
-
-  .title_fiverr { font-size: 15px;}
-}
+//@media (max-width: 480px) {
+//
+//  .title_fiverr { font-size: 60%;}
+//}
