--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to 'Fiverr Cool Picture Contest', ratings_url, :class => 'brand title_fiverr' %>
+      <%= link_to 'Fiverr Cool Picture Contest', ratings_url, :class => 'brand' %>
       <div class="nav-collapse">
         <ul class="nav">
           <li>
