--- a/app/views/ratings/show.html.erb
+++ b/app/views/ratings/show.html.erb
@@ -1,7 +1,9 @@
 <br>
 <br>
+<div style="height: 100px;" class="visible-tablet visible-phone"></div>
 <p id="notice" class="big_notice"><%= notice %></p>
 <% if defined? flash[:notice_small]  %>
     <p id="small_notice" class="small_notice"><%= flash[:notice_small] %></p>
 <% end %>
+
 
