--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -8,7 +8,7 @@
         <%= image_tag(@rating1.pic_url, :class => 'select-img') %>
       </a>
     </div>
-
+    <div style="height: 30px;" class="visible-phone"></div>
     <div class="span5">
       <a href="/ratings/<%= @rating2.id %>/update/<%= @rating1.id %>">
         <%= image_tag(@rating2.pic_url, :class => 'select-img') %>
