--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -3,13 +3,13 @@
   <br>
 
   <div class="row centered">
-    <div class="span5">
+    <div class="span5 list_pic">
       <a href="/ratings/<%= @rating1.id %>/update/<%= @rating2.id %>">
         <%= image_tag(@rating1.pic_url, :class => 'select-img') %>
       </a>
     </div>
     <div style="height: 30px;" class="visible-phone"></div>
-    <div class="span5">
+    <div class="span5 list_pic">
       <a href="/ratings/<%= @rating2.id %>/update/<%= @rating1.id %>">
         <%= image_tag(@rating2.pic_url, :class => 'select-img') %>
       </a>
