--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -1,13 +1,14 @@
 <div id="main">
-  <h1>The Pics List</h1>
 
+  <h1>The Pics List</h1>
   <p>Ordered by rating</p>
 
-  <p>Total of <%= @number_of_pics %> images</p>
-  <a class="btn" href="ratings/list">all pics</a>
+  <%= paginate  @pics %>
+  <!--<p>Total of <%= @number_of_pics %> images</p>-->
+  <!--<a class="btn" href="list">all pics</a>-->
   <% i=1
      while i<@number_of_pics %>
-         <a class="btn" href="ratings/list/<%= i%>"><%= i%></a>
+         <!--<a class="btn" href="list/<%= i%>"><%= i%></a>-->
   <% i += 10
      end %>
   <div class="clearfix"></div><br>
@@ -21,9 +22,14 @@
             </div>
           </td>
           <td class="hidden-phone">Rating:<br><%= pic.rating.round(0) %></td>
+          <% if  user_signed_in? &&  current_user.id==1
+          %>
           <td><%= link_to 'Delete This Pic', pic,
                           :confirm => 'Are you sure?', :method => :delete %></td>
+           <%end%>
     <% end %>
     </tbody>
   </table>
+
+  <%= paginate  @pics %>
 </div>
