after a few view+user model devise modifications

--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -1,7 +1,7 @@
 <div id="main">
 
   <h1>The Pics List</h1>
-  <p>Ordered by rating</p>
+  <p><u>Ordered by rating</u></p>
 
   <%= paginate  @pics %>
   <!--<p>Total of <%= @number_of_pics %> images</p>-->
