--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,9 +53,9 @@
     <%= link_to "Suggestions?",
                 "mailto:ohadpartuck@gmail.com?subject=fiverr image contest suggestions",
                 :target => "_blank"%></div>
-  <%= if user_signed_in?
-      link_to "Sign Out", destroy_user_session_path, :method => :delete
-     end
+  <%#= if user_signed_in?
+    #  link_to "Sign Out", destroy_user_session_path, :method => :delete
+    # end
   %>
 
 </footer>
