add iphone instructions

--- a/app/assets/stylesheets/ratings.css.scss
+++ b/app/assets/stylesheets/ratings.css.scss
@@ -70,6 +70,14 @@ body{
   display: none;
 
 }
+.iphone-image{
+  width: 40px;
+
+}
+
+.mobile{
+  line-height: 50px;
+}
 
 .page a, .next a, .last a, .prev a, .first a{
   background: #ffffff;
