--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
               <li>
                 <%= link_to 'Upload Your Own', new_rating_path %>
               </li>
+              <li>
+                <%= link_to 'Recent', 'ratings/recent' %>
+              </li>
             </ul>
       </div>
       <!--/.nav-collapse -->
