--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
                 <%= link_to 'Upload Your Own', new_rating_path %>
               </li>
               <li>
-                <%= link_to 'Recent', 'ratings/recent' %>
+                <%= link_to 'Recent', '/ratings/recent' %>
               </li>
             </ul>
       </div>
