--- a/app/views/ratings/recent.html.erb
+++ b/app/views/ratings/recent.html.erb
@@ -14,8 +14,8 @@
           </td>
           <td class="hidden-phone">Rating:<br><%= pic.rating.round(0) %></td>
          
-         <td><%= link_to 'Delete This Pic', pic,
-                          :confirm => 'Are you sure?', :method => :delete %></td>
+         <!--<td><%= link_to 'Delete This Pic', pic,
+                          :confirm => 'Are you sure?', :method => :delete %></td> -->
     <% end %>
     </tbody>
   </table>
