--- a/app/views/ratings/list.html.erb
+++ b/app/views/ratings/list.html.erb
@@ -23,7 +23,7 @@
           </td>
           <td class="hidden-phone">Rating:<br><%= pic.rating.round(0) %></td>
           <% #if  user_signed_in? &&  current_user.id==1%>
-         <<td><%= link_to 'Delete This Pic', pic,
+         <td><%= link_to 'Delete This Pic', pic,
                           :confirm => 'Are you sure?', :method => :delete %></td>
            <%#end%>
     <% end %>
